# chromium

./: .clang-format  .clang-tidy  .clangd  .cursorignore  .eslintrc.js  .filter-ci.js  .geminiignore  .git-blame-ignore-revs  .gitallowed  .gitattributes  .gitignore  .gitmodules  .gn  .mailmap  .pre-commit-config.yaml  .rgignore  .rustfmt.toml  .travis.yml  .vpython  .vpython3  .yapfignore  ATL_OWNERS  AUTHORS  BRANCH_FEATURE_OWNERS  BRANCH_OWNERS  BUCK  BUILD.gn  C  CHANGELOG-ABP.md  CHANGELOG-CHROMIUM-LITE.md  CLAUDE.MD  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING-CHROMIUM-LITE.md  CPPLINT.cfg  CRYPTO_OWNERS  Ch  DEPS  DIR_METADATA  Dockerfile.build  (+61 more)
android_webview/: AndroidManifest_standalone_webview.xml  BUILD.gn  DEPS  DIR_METADATA  OWNERS  PRESUBMIT.py  README.md  aapt2.config  system_webview_apk_tmpl.gni  system_webview_bundle.gni  variables.gni  webview_repack_locales.gni  webview_repack_locales_list.gni
android_webview/browser/: BUILD.gn  DEPS  OWNERS  android_protocol_handler.cc  android_protocol_handler.h  aw_apk_type.h  aw_app_defined_websites.cc  aw_app_defined_websites.h  aw_app_defined_websites_unittest.cc  aw_asset_domain_list_include_handler.cc  aw_asset_domain_list_include_handler.h  aw_asset_domain_list_include_handler_unittest.cc  aw_asset_reader.cc  aw_asset_reader.h  aw_autofill_client.cc  aw_autofill_client.h  aw_back_forward_cache_settings.cc  aw_back_forward_cache_settings.h  aw_backforward_cache_not_restored_reason.h  aw_browser_context.cc  aw_browser_context.h  aw_browser_context_store.cc  aw_browser_context_store.h  aw_browser_context_unittest.cc  aw_browser_main_parts.cc  aw_browser_main_parts.h  aw_browser_permission_request_delegate.h  aw_browser_policy_connector.cc  aw_browser_policy_connector.h  aw_browser_process.cc  aw_browser_process.h  aw_browser_terminator.cc  aw_browser_terminator.h  aw_client_hints_controller_delegate.cc  aw_client_hints_controller_delegate.h  aw_client_hints_controller_delegate_unittest.cc  aw_content_browser_client.cc  aw_content_browser_client.h  aw_content_browser_client_content_restriction_throttles_unittest.cc  aw_content_browser_client_receiver_bindings.cc  (+168 more)
android_webview/common/: BUILD.gn  DEPS  OWNERS  aw_cached_flags.cc  aw_cached_flags.h  aw_content_client.cc  aw_content_client.h  aw_descriptors.h  aw_feature_map.cc  aw_feature_map.h  aw_features.cc  aw_features.h  aw_hit_test_data.h  aw_media_drm_bridge_client.cc  aw_media_drm_bridge_client.h  aw_paths.cc  aw_paths.h  aw_resource.cc  aw_resource.h  aw_resource_bundle.cc  aw_resource_bundle.h  aw_switches.cc  aw_switches.h  devtools_instrumentation.h  render_view_messages.cc  render_view_messages.h  url_constants.cc  url_constants.h
android_webview/docs/: README.md  aosp-system-integration.md  architecture.md  bugreport.md  build-instructions.md  channels.md  commandline-flags.md  community-guidelines.md  contributing-tests.md  cookies.md  cors-and-webview-api.md  developer-ui.md  device-setup.md  faq.md  flag-ui.md  full-screen.md  how-does-loading-work.md  how-does-on-create-window-work.md  insets.md  java-bridge.md  legacy-os-behavior.md  lifetime-annotations.md  navbar.md  net-debugging.md  prerelease.md  privacy-sandbox.md  quick-start-legacy.md  quick-start.md  removing-system-apps.md  software_draw_deprecated.md  test-instructions.md  threading.md  web-page-layout.md  web-platform-compatibility.md  webview-packaging-variants.md  webview-providers.md  webview-shell.md
android_webview/expectations/: OWNERS  README.md  system_webview_32_64_bundle.AndroidManifest.expected  system_webview_32_bundle.AndroidManifest.expected  system_webview_64_32_bundle.AndroidManifest.expected  system_webview_64_bundle.AndroidManifest.expected  system_webview_bundle.AndroidManifest.expected  trichrome_webview_32_64_bundle.AndroidManifest.expected  trichrome_webview_32_64_bundle.arm64.libs_and_assets.expected  trichrome_webview_32_bundle.AndroidManifest.expected  trichrome_webview_32_bundle.arm64.libs_and_assets.expected  trichrome_webview_64_32_bundle.AndroidManifest.expected  trichrome_webview_64_32_bundle.arm64.libs_and_assets.expected  trichrome_webview_64_32_public_bundle.proguard_flags.expected  trichrome_webview_64_bundle.AndroidManifest.expected  trichrome_webview_64_bundle.arm64.libs_and_assets.expected  trichrome_webview_bundle.AndroidManifest.expected  trichrome_webview_bundle.arm.libs_and_assets.expected  (+1 more)
apps/: BUILD.gn  COMMON_METADATA  DEPRECATION_OWNERS  DEPS  DIR_METADATA  OWNERS  app_lifetime_monitor.cc  app_lifetime_monitor.h  app_lifetime_monitor_factory.cc  app_lifetime_monitor_factory.h  app_restore_service.cc  app_restore_service.h  app_restore_service_browsertest.cc  app_restore_service_factory.cc  app_restore_service_factory.h  browser_context_keyed_service_factories.cc  browser_context_keyed_service_factories.h  launcher.cc  launcher.h  load_and_launch_browsertest.cc  saved_files_service.cc  saved_files_service.h  saved_files_service_factory.cc  saved_files_service_factory.h  saved_files_service_unittest.cc  switches.cc  switches.h
build_overrides/: OWNERS  README.md  angle.gni  build.gni  crubit.gni  dawn.gni  glslang.gni  gtest.gni  ipcz.gni  mesa.gni  meson.gni  partition_alloc.gni  pdfium.gni  protobuf.gni  shaderc.gni  spirv_tools.gni  swiftshader.gni  tint.gni  vulkan_common.gni  vulkan_headers.gni  vulkan_loader.gni  vulkan_memory_allocator.gni  vulkan_tools.gni  vulkan_utility_libraries.gni  vulkan_validation_layers.gni  wayland.gni
buildtools/: .gitignore  DEPS  LICENSE  OWNERS  README.txt  deps_revisions.gni  ensure_gn_version.py
cc/: BUILD.gn  DEPS  OWNERS  PRESUBMIT.py  README.md  cc.gni  cc_export.h  typemaps.gni  unit_tests_bundle_data.filelist  unit_tests_bundle_data.globlist
cc/animation/: BUILD.gn  (+66 more)
chrome/: BUILD.gn  DEPS  DIR_METADATA  HYPERTRAIL_VERSION  LACROS_QA_QUALIFIED_VERSION  MAJOR_BRANCH_DATE  OWNERS  PRESUBMIT.py  PRESUBMIT_test.py  README.md  VERSION  browser_exposed_mojom_targets.gni  chrome_branch_deps.json  chrome_paks.gni  chrome_repack_locales.gni  process_version_rc_template.gni  typemaps.gni  version.gni
(+338920 files in other folders)
